--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -37,12 +37,14 @@
     "@backstage/plugin-search-backend-module-catalog": "^0.1.24",
     "@backstage/plugin-search-backend-module-techdocs": "^0.1.23",
     "@backstage/plugin-search-backend-node": "^1.2.22",
+    "@backstage/plugin-signals-backend": "^0.1.4",
     "@backstage/plugin-techdocs-backend": "^1.10.5",
+    "@internal/backstage-plugin-notifications-backend": "^0.1.0",
     "app": "link:../app",
-    "better-sqlite3": "^9.0.0",
     "dockerode": "^3.3.1",
     "node-gyp": "^9.0.0",
     "pg": "^8.11.3",
+    "sqlite3": "^5.1.7",
     "winston": "^3.2.1"
   },
   "devDependencies": {
