test: Mock server added

--- a/app-config.yaml
+++ b/app-config.yaml
@@ -9,9 +9,13 @@ backend:
   # Used for enabling authentication, secret is shared by all backend plugins
   # See https://backstage.io/docs/auth/service-to-service-auth for
   # information on the format
-  # auth:
-  #   keys:
-  #     - secret: ${BACKEND_SECRET}
+  auth:
+    externalAccess:
+      - type: static
+        options:
+          token: me7fSDxdYjM6KChN66a0X1Kn8pskPYn7
+          subject: test-post-notifications
+
   baseUrl: http://localhost:7007
   listen:
     port: 7007
