--- a/plugins/notifications-backend/package.json
+++ b/plugins/notifications-backend/package.json
@@ -28,19 +28,24 @@
     "@backstage/backend-plugin-api": "^0.6.18",
     "@backstage/config": "^1.2.0",
     "@backstage/plugin-signals-node": "workspace:^",
+    "@internal/backstage-plugin-notifications-common": "0.0.1",
     "@types/express": "*",
-    "express": "^4.17.1",
+    "ajv": "^8.16.0",
+    "express": "^4.19.2",
     "express-promise-router": "^4.1.0",
     "knex": "^3.1.0",
     "node-fetch": "^2.6.7",
+    "supertest": "^7.0.0",
     "winston": "^3.2.1",
     "yn": "^4.0.0"
   },
   "devDependencies": {
+    "@backstage/backend-test-utils": "workspace:^",
     "@backstage/cli": "^0.26.5",
     "@backstage/plugin-auth-backend": "^0.22.5",
     "@backstage/plugin-auth-backend-module-guest-provider": "^0.1.4",
     "@types/supertest": "^2.0.12",
+    "jest": "^29.7.0",
     "msw": "^1.0.0",
     "supertest": "^6.2.4"
   },
