--- a/plugins/notifications/package.json
+++ b/plugins/notifications/package.json
@@ -28,6 +28,7 @@
     "@backstage/core-plugin-api": "^1.9.2",
     "@backstage/plugin-signals-react": "workspace:^",
     "@backstage/theme": "^0.5.5",
+    "@internal/backstage-plugin-notifications-common": "0.0.1",
     "@material-ui/core": "^4.9.13",
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "4.0.0-alpha.61",
