--- a/plugins/notifications/package.json
+++ b/plugins/notifications/package.json
@@ -33,6 +33,7 @@
     "@material-ui/icons": "^4.9.1",
     "@material-ui/lab": "4.0.0-alpha.61",
     "@mui/icons-material": "^5.15.19",
+    "@mui/material": "^5.15.19",
     "react-use": "^17.2.4"
   },
   "peerDependencies": {
