--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "lint:all": "backstage-cli repo lint",
     "prettier:check": "prettier --check .",
     "prettier:write": "prettier --write .",
-    "new": "backstage-cli new --scope internal"
+    "new": "backstage-cli new --scope internal",
+    "run:mock-server": "node ./mock-server/index.js"
   },
   "workspaces": {
     "packages": [
